--- a/.github/workflows/tf-apply-main.yml
+++ b/.github/workflows/tf-apply-main.yml
@@ -42,7 +42,7 @@ jobs:
       run: |
         echo $ACCOUNT_ID
         aws s3api head-object --bucket do-not-delete-awsgoat-state-files-${{ steps.account.outputs.ACCOUNT_ID }} --key terraform.tfstate
-      continue-on-error: true
+      continue-on-error: false
 
     - name: Exit if previous deployment exists
       if: steps.check.outcome == 'success' 
