--- a/.github/workflows/tf-apply-main.yml
+++ b/.github/workflows/tf-apply-main.yml
@@ -41,7 +41,7 @@ jobs:
       id: check 
       run: |
         echo $ACCOUNT_ID
-        aws s3api head-object --bucket do-not-delete-awsgoat-state-files-${{ steps.account.outputs.ACCOUNT_ID }} --key terraform.tfstate
+        aws s3api head-object --bucket do-not-delete-awsgoat-state-files-${{ steps.account.outputs.028447598768 }} --key terraform.tfstate
       continue-on-error: false
 
     - name: Exit if previous deployment exists
